--- a/style.css
+++ b/style.css
@@ -4,13 +4,15 @@ body {
     font-family: "Infer", sans-serif;
     background-color: #191919;
 }
-input{
+
+input {
     position: fixed;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     font-size: 3rem;
 }
+
 .notif-container {
     position: fixed;
     right: 0;
@@ -30,7 +32,7 @@ input{
     max-width: 30rem;
     width: fit-content;
     /* bounce */
-    animation: slinein 0.5s forwards cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    animation: slidein 0.5s forwards cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform: translateX(50%);
     margin: 10px;
     border: 1px solid #606468;
@@ -79,7 +81,7 @@ input{
     }
 }
 
-@keyframes slinein {
+@keyframes slidein {
     from {
         max-height: 0;
         opacity: 0;
